--- a/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
+++ b/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
@@ -45,8 +45,9 @@
   <ItemGroup>
     <Compile Include="Conversions.cs" />
     <Compile Include="Exceptions.cs" />
-    <Compile Include="Helpers.cs" />
+    <Compile Include="BasicHelpers.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="LogicHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solve.cs" />
   </ItemGroup>
