adding enum to differentiate between results.

--- a/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
+++ b/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BasicHelpers.cs" />
     <Compile Include="Heuristics\HiddenPairs.cs" />
     <Compile Include="Heuristics\HiddenSingles.cs" />
+    <Compile Include="Heuristics\NakedSingles.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="LogicHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
