--- a/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
+++ b/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
@@ -45,16 +45,16 @@
   <ItemGroup>
     <Compile Include="Conversions.cs" />
     <Compile Include="Exceptions.cs" />
-    <Compile Include="BasicHelpers.cs" />
+    <Compile Include="Helpers\BasicHelpers.cs" />
+    <Compile Include="Helpers\Enum.cs" />
+    <Compile Include="Heuristics\HeuristicSolver.cs" />
     <Compile Include="Heuristics\HiddenPairs.cs" />
     <Compile Include="Heuristics\HiddenSingles.cs" />
+    <Compile Include="Heuristics\NakedSingles.cs" />
     <Compile Include="Input.cs" />
-    <Compile Include="LogicHelpers.cs" />
+    <Compile Include="Helpers\LogicHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solve.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
