--- a/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
+++ b/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Conversions.cs" />
     <Compile Include="Exceptions.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="Helpers\BasicHelpers.cs" />
     <Compile Include="Helpers\Enum.cs" />
     <Compile Include="Heuristics\HeuristicSolver.cs" />
