handled the read and print from/to file.

--- a/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
+++ b/Omega Sudoku/Omega Sudoku/Omega Sudoku.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Conversions.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="Handlers\ConsoleChoiceHandler.cs" />
+    <Compile Include="Handlers\FileChoiceHandler.cs" />
     <Compile Include="Helpers\BasicHelpers.cs" />
     <Compile Include="Helpers\Enum.cs" />
     <Compile Include="Heuristics\HeuristicSolver.cs" />
